
	Initial commit

========================v0.1.1=========================
2018-02-22	Joe Flood	<joejimflood@gmail.com>

	*Changed Profile.from_counts() to external
	 function fit() in util module
	*Removed references to old package name in
	 documentation
	*Renamed variables to make theoretically
	 more user-friendly
	*Moved package into own folder in repository

========================v0.1.2=========================
2018-02-25	Joe Flood	<joejimflood@gmail.com>
	*Changed FourierSeries.K to *.n_harmonics and
	 PPD.L to PPD.log_pdf_coef for increased read-
	 ability (though kept them as shortcuts)

========================v0.2.0=========================
2018-03-04	Joe Flood	<joejimflood@gmail.com>

	*Added I/O tools

========================v0.2.1=========================
2018-03-04	Joe Flood	<joejimflood@gmail.com>

	*Changed Profile indexing so that a single
	 numeric value results in that many bins being
	 aggregated from the Profile

========================v0.2.2=========================
2018-03-10	Joe Flood	<joejimflood@gmail.com>

	*Removed time_range attribute from PPD
	*Renamed FourierSeries.c to FourierSeries.coef
	 but kept c as an alias

========================v0.2.3=========================
2018-05-06	Joe Flood	<joejimflood@gmail.com>

	*Removed FourierSeries.log() method as it was
	 not necessary and didn't work right
	*Changed FourierSeries.integrate() soth that it
	 returns a float if a single number is input
	*Updated Profile.__add__() so that it is
	 compatible with changes since it was written
	*Made expand() and contract() methods in
	 FourierSeries private methods
	*Renamed PPD.m to PPD.moments (but kept .m as
	 an alias)

========================v0.2.4=========================
2018-05-18	Joe Flood	<joejimflood@gmail.com>
	*Removed restriction in Profile.__getitem__() 
         where indices had to be within the time range
	*Changed Profile.__getitem__() method so that  
	 if an array of length N is input, an array of
	 length N-1 is returned