@@ -1,1 +1,1 @@
-__version__ = '0.2.3'
+__version__ = '1.0'
